Fixed word spacing

--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -88,7 +88,7 @@
     color: rgb(24, 24, 24);
   }
   .project-desc {
-    word-spacing: 15px;
+    word-spacing: 3px;
     color: var(--clr-grey-3);
   }
   .project-stack {
